# TDSP

./: .gitignore  README.md  pyproject.toml
docs/acceptance/: exit_report.md
docs/business_understanding/: project_charter.md
docs/data/: data_definition.md  data_dictionary.md  data_summary.md
docs/data/Raw_data/: Get_raw_data.txt
docs/data/SQL_documentation/: SQL_Documentation.md
docs/deployment/: deploymentdoc.md
docs/infrastructure/: infrastructure_docs.md
docs/modeling/: baseline_models.md
scripts/data_acquisition/: Query_data_MySQL.py
scripts/preprocessing/: Query_data_MySQL.py  data_aquisition.py  data_processing.py
scripts/training/: main.py
