[tool.poetry]
name = "packagename"
version = "0.1.0"
description = "Project template"
authors = ["Martin Jaramillo <majaramillogon@unal.edu.co>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
