[tool.poetry]
name = "majaramillogon"
version = "0.1.0"
description = "This is the template for my project"
authors = ["Martin Jaramillo <majaramillogon@unal.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
scikit-learn = "^1.1.3"


[tool.poetry.group.dev.dependencies]
seaborn = "^0.12.1"
mysql-connector = "^2.2.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
